# ckanext-clamav

./: .flake8  MANIFEST.in  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: check_clamav_started.sh  flake8.yml  install_clamav.sh  publish.yml  pyright.yml  pytest.yml  test.yml
ckanext/clamav/: adapters.py  config.py  plugin.py  utils.py
ckanext/clamav/tests/: test_clamav_local.py  test_clamav_tcp.py  test_config.py  test_mocked_clamav.py  test_plugin.py
