[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-clamav"
description = "Check upload resources for viruses"
keywords = []
readme = "README.md"
authors = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
    {name = "Oleksandr Cherniavskyi", email = "mutantsan@gmail.com"},
]
maintainers = [
    {name = "DataShades", email = "datashades@linkdigital.com.au"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
dependencies = []
license = {text = "AGPL"}
requires-python = ">=3.8"
version = "1.0.32"

[project.entry-points."ckan.plugins"]
clamav="ckanext.clamav.plugin:ClamavPlugin"

[project.entry-points."babel.extractors"]
ckan = "ckan.lib.extract:extract_ckan"

[project.urls]
Homepage = "https://github.com/DataShades/ckanext-clamav"

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
addopts = "--ckan-ini test.ini"
filterwarnings = [
    "ignore::DeprecationWarning",
]
